# XShaderCompiler

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  FindHLSLTranslator.cmake  FindXShaderCompiler.cmake  LICENSE.txt  README.md  TODO.md  appveyor.yml
docu/: DevNotes.md  Expressions.rst  HLSLGrammar.g4  TypeSystem.rst
docu/GettingStarted/: Getting Started with XShaderCompiler.tex
docu/man/: xsc.1
inc/: Logger.h
inc/HT/: ConsoleManip.h  Export.h  IncludeHandler.h  Log.h  Logger.h  Report.h  Targets.h  Translator.h  Version.h
inc/Xsc/: ConsoleManip.h  Export.h  IncludeHandler.h  IndentHandler.h  Log.h  Reflection.h  Report.h  SamplerState.h  Targets.h  Translator.h  Version.h  Xsc.h
inc/XscC/: IncludeHandlerC.h  ReflectionC.h  TargetsC.h  TypesC.h  XscC.h
shell/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandLine.cpp  CommandLine.h  HelpPrinter.cpp  HelpPrinter.h  Main.cpp  Shell.cpp  Shell.h  ShellState.h
src/: ASTPrinter.cpp  ASTPrinter.h  CodeWriter.cpp  CodeWriter.h  ConsoleManip.cpp  Flags.h  FuncUseAnalyzer.cpp  FuncUseAnalyzer.h  GLSLGenerator.cpp  GLSLGenerator.h  HLSLAnalyzer.cpp  HLSLAnalyzer.h  HLSLErr.cpp  HLSLErr.h  HLSLKeywords.cpp  HLSLKeywords.h  HLSLParser.cpp  HLSLParser.h  HLSLScanner.cpp  HLSLScanner.h  HLSLTree.cpp  HLSLTree.h  Log.cpp  Parser.cpp  Parser.h  PreProcessor.cpp  PreProcessor.h  PreProcessorScanner.cpp  PreProcessorScanner.h  ReferenceAnalyzer.cpp  ReferenceAnalyzer.h  Report.cpp  ReportHandler.cpp  ReportHandler.h  Scanner.cpp  Scanner.h  SourceCode.cpp  SourceCode.h  SourcePosition.cpp  SourcePosition.h  (+8 more)
src/Compiler/: AST.cpp  AST.h  ASTEnums.cpp  ASTEnums.h  ASTPrinter.cpp  CiString.h  CodeWriter.cpp  CodeWriter.h  Compiler.cpp  Compiler.h  ConsoleManip.cpp  ConstExprEvaluator.cpp  ConstExprEvaluator.h  Dictionary.h  EndOfScopeAnalyzer.h  Exception.cpp  Exception.h  ExprEvaluator.cpp  ExprEvaluator.h  Flags.h  GLSLGenerator.cpp  GLSLGenerator.h  HLSLAnalyzer.cpp  HLSLAnalyzer.h  HLSLErr.cpp  HLSLErr.h  HLSLParser.cpp  HLSLParser.h  HLSLTree.cpp  Helper.cpp  Helper.h  IncludeHandler.cpp  IndentHandler.cpp  JoinString.cpp  JoinString.h  Log.cpp  MemoryPool.cpp  MemoryPool.h  Optimizer.cpp  Optimizer.h  (+33 more)
src/Compiler/AST/: AST.cpp  AST.h  ASTEnums.cpp  ASTEnums.h  ASTFactory.cpp  ASTFactory.h  ASTPrinter.cpp  ASTPrinter.h  Identifier.cpp  Identifier.h  SourceArea.cpp  SourceArea.h  SourcePosition.cpp  SourcePosition.h  Token.cpp  Token.h  TokenString.cpp  TokenString.h  TypeDenoter.cpp  TypeDenoter.h  Visitor.cpp  Visitor.h
src/Compiler/Backend/: Converter.cpp  Converter.h  Generator.cpp  Generator.h
src/Compiler/CFG/: BasicBlock.cpp  BasicBlock.h  CFGBuilder.cpp  CFGBuilder.h  Float16Compressor.cpp  Float16Compressor.h  Instruction.cpp  Instruction.h  InstructionFactory.cpp  InstructionFactory.h  Module.cpp  Module.h  ModuleFunction.cpp  ModuleFunction.h  SPIRVDisassembler.cpp  SPIRVDisassembler.h  SPIRVHelper.cpp  SPIRVHelper.h
src/Compiler/Frontend/: Analyzer.cpp  Analyzer.h  IntrinsicAdept.cpp  IntrinsicAdept.h  Parser.cpp  Parser.h  PreProcessor.cpp  PreProcessor.h  PreProcessorScanner.cpp  PreProcessorScanner.h  ReferenceAnalyzer.cpp  ReferenceAnalyzer.h  SLParser.cpp  SLParser.h  SLScanner.cpp  SLScanner.h  Scanner.cpp  Scanner.h
src/Compiler/Report/: Report.cpp  ReportHandler.cpp  ReportHandler.h  ReportIdents.cpp  ReportIdents.h  ReportIdentsDE.h  ReportIdentsEN.h
src/Debugger/: Debugger.cpp  Debugger.h  DebuggerView.cpp  DebuggerView.h  ReportView.cpp  ReportView.h  Resources.rc  SourceView.cpp  SourceView.h  SourceViewLanguageGLSL.h  SourceViewLanguageHLSL.h  WxHelper.h
src/Shell/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandLine.cpp  CommandLine.h  HelpPrinter.cpp  HelpPrinter.h  Main.cpp  Shell.cpp  Shell.h  ShellState.h
src/Wrapper/C/: XscC.cpp
src/Wrapper/CSharp/: CMakeLists.txt  XscCSharp.cpp
src/unix/: UnixConsoleManip.cpp
src/win32/: Win32ConsoleManip.cpp
test/: .gitignore  ArrayTest1.hlsl  ArrayTest3.hlsl  BufferObjects.hlsl  CastTest1.hlsl  ConstExpr.hlsl  ESSL_IO_Semantics.hlsl  ExprTest1.hlsl  ExprTest2.hlsl  ExprTest3.hlsl  ExprTest5.hlsl  ExtLayoutAttrTest1.hlsl  ExtSpaceAttrTest1.hlsl  ExtSpaceAttrTest2.hlsl  FloatTest1.hlsl  FloatTest2.hlsl  FormattingTest1.hlsl  FuncOverloadTest1.hlsl  FunctionCallTest1.hlsl  FunctionDeclTest1.hlsl  GLSLTest1.vert  GatherTest2.hlsl  GeometryTest1.hlsl  GeometryTest2.hlsl  GeometryTest3.hlsl  GeometryTest4.hlsl  InOutParamTest1.hlsl  IntrinsicTest1.hlsl  MatrixMulTest1.hlsl  MatrixSubscriptsTest1.hlsl  MemberFuncTest1.hlsl  MemberFuncTest2.hlsl  MemberFuncTest3.hlsl  MemberFuncTest4.hlsl  MemoryBarrierTest1.hlsl  NameMangling1.hlsl  PPExprTest1.hlsl  PPTest1.hlsl  PPTest2.hlsl  PPTest3.vert  (+36 more)
test/GLSL/: ExprTest1.vert  presetting.txt
test/SPIR-V/: SimpleTransform.vert  SimpleTransform.vert.spv  SolidColor.frag  SolidColor.frag.spv  VectorShuffle.frag  VectorShuffle.frag.spv
test/concept/: GLSLTest1.vert  SemanticTranslationConcept1.VS1.vert  SemanticTranslationConcept1.hlsl
test/in/GLSL/: ExprTest1.vert  PPTest3.vert  PPTest3Header.vert  presetting.txt
test/in/HLSL/: ArrayInInputStruct.hlsl  ArrayTest2.hlsl  ArrayTest3.hlsl  BufferObjects.hlsl  CastTest1.hlsl  ConstExpr.hlsl  ErrorTest1.hlsl  ExprTest1.hlsl  ExprTest2.hlsl  ExprTest4.hlsl  ExtSpaceAttrTest1.hlsl  FloatTest2.hlsl  FormattingTest1.hlsl  GatherTest1.hlsl  ImageBufferTest1.hlsl  InitializerTest1.hlsl  IntrinsicClip.hlsl  MatrixLayoutTest1.hlsl  MemberFuncTest1.hlsl  MemberFuncTest2.hlsl  MemberFuncTest3.hlsl  MemberFuncTest4.hlsl  MemberFuncTest5.hlsl  MemberVarTest1.hlsl  MemoryBarrierTest1.hlsl  ObjectAccessTest1.hlsl  PPExprTest1.hlsl  PPTest1.hlsl  PPTest3.hlsl  RWTextureTest1.hlsl  RWTextureTest4.hlsl  ReflectionTest1.hlsl  SamplerBuffer1.hlsl  SemanticTest3.hlsl  SemanticTest4.hlsl  SemanticTypes.hlsl  StructInheritTest1.hlsl  StructInheritTest2.hlsl  (+5 more)
test/output/: TestShader1.compute.glsl  TestShader1.fragment.glsl  TestShader1.vertex.glsl  TestShader2.fragment.glsl  TestShader2.vertex.glsl
tool/: main.cpp
(+70 files in other folders)
